fix parent element use overflow:hidden with border-radius

--- a/public/stylesheets/app/music.css
+++ b/public/stylesheets/app/music.css
@@ -24,17 +24,24 @@
 	left:3%;
 	position: absolute;
 	border-radius: 50%;
+	overflow: hidden;
+	-webkit-perspective: 800;
+	-moz-perspective: 800;
+	-o-perspective: 800;
+	perspective: 800; 
 }
 
 .music-ul>li>.box>.rotation{
-	position: absolute;
 	top:0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	border-radius: 50%;
 	overflow: hidden;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
 
 .music-ul>li>.box>.rotation>img{
@@ -45,6 +52,10 @@
 	height: 100%;
 	border-radius: 50%;
 	opacity: 0.9;
+	-webkit-backface-visibility: hidden ;
+	-moz-backface-visibility: hidden ;
+	-o-backface-visibility: hidden ;
+	backface-visibility: hidden ;
 }
 .refresh-btn{
 	position: absolute;
